--- a/package.json
+++ b/package.json
@@ -25,12 +25,15 @@
     "@nestjs/mapped-types": "^2.0.5",
     "@nestjs/platform-express": "^10.0.0",
     "@prisma/client": "^5.13.0",
+    "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "jsonwebtoken": "^9.0.2",
     "nodemon": "^3.1.0",
     "prisma": "^5.13.0",
     "reflect-metadata": "^0.2.0",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "unique-username-generator": "^1.3.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
